--- a/turbo.json
+++ b/turbo.json
@@ -17,6 +17,10 @@
             "cache": false,
             "persistent": true
         },
+        "dev:db": {
+            "cache": false,
+            "persistent": true
+        },
         "db:dev:up": {
             "dependsOn": [],
             "outputs": []
