--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -39,6 +39,7 @@
         "passport-jwt": "^4.0.1",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
+        "uuid": "^11.1.0",
         "zod": "^3.24.2"
     },
     "devDependencies": {
