--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,9 +31,11 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
+        "socket.io-client": "^4.8.1",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.7",
-        "zod": "^3.24.2"
+        "zod": "^3.24.2",
+        "zustand": "^5.0.3"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
