--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,7 @@
         "@nestjs/jwt": "^11.0.0",
         "@nestjs/passport": "^11.0.5",
         "@nestjs/platform-express": "^11.0.1",
+        "@nestjs/swagger": "^11.1.5",
         "@nestjs/throttler": "^6.4.0",
         "@prisma/client": "6.4.0",
         "@repo/eslint-config": "workspace:*",
@@ -37,6 +38,7 @@
         "jsonwebtoken": "^9.0.2",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
+        "razorpay": "^2.9.6",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
         "uuid": "^11.1.0",
