--- a/apps/socket/package.json
+++ b/apps/socket/package.json
@@ -27,6 +27,7 @@
         "@nestjs/core": "^11.0.1",
         "@nestjs/platform-express": "^11.0.1",
         "@nestjs/platform-socket.io": "^11.0.10",
+        "@nestjs/swagger": "^11.1.5",
         "@nestjs/websockets": "^11.0.10",
         "@prisma/client": "6.4.0",
         "jsonwebtoken": "^9.0.2",
