--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,6 +30,7 @@
         "@nestjs/platform-express": "^11.1.0",
         "@nestjs/swagger": "^11.1.5",
         "@nestjs/throttler": "^6.4.0",
+        "@nestjs/websockets": "^11.0.10",
         "@prisma/client": "6.4.0",
         "@repo/eslint-config": "workspace:*",
         "@repo/typescript-config": "workspace:*",
@@ -41,6 +42,7 @@
         "razorpay": "^2.9.6",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.2",
+        "socket.io": "^4.8.1",
         "uuid": "^11.1.0",
         "zod": "^3.24.3"
     },
